# rust-blogs

./: Cargo.toml  README.md
config/: dev.toml
sql/: rust-blogs.sql
src/: context.rs  main.rs
src/auth/: err.rs  mod.rs
src/config/: mod.rs
src/controller/admin/: article_controller.rs  category_controller.rs  comment_controller.rs  mod.rs  oss_controller.rs  sys_menu_controller.rs  sys_role_controller.rs  sys_user_controller.rs
src/domain/: mod.rs
src/domain/dto/: article_dto.rs  category_dto.rs  comment_dto.rs  menu_dto.rs  mod.rs  role_dto.rs  user_dto.rs  user_role_dto.rs
src/domain/entity/: article_categories.rs  articles.rs  blog_comment.rs  blogs_user.rs  mod.rs  sys_menu.rs  sys_role.rs  sys_role_menu.rs  sys_user.rs  sys_user_role.rs
src/domain/vo/: comment_vo.rs  menu_vo.rs  mod.rs  permission_menu_vo.rs
src/middleware/: auth_middleware.rs
src/route/admin/: article_route.rs  category_route.rs  comment_route.rs  mod.rs  oss_route.rs  sys_menu_route.rs  sys_role_route.rs  sys_user_route.rs
src/service/: article_service.rs  category_service.rs  comment_service.rs  mod.rs  oss_service.rs  sys_menu_service.rs  sys_role_service.rs  sys_user_service.rs
src/util/: mod.rs  response_result.rs
templates/: role.html  role_permissions.html
