[package]
name = "rust-oy-blogs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
chrono = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
jsonwebtoken = "9.2.0"
async-trait = "0.1.86"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
headers = "0.4.0"
thiserror = "2.0.11"
config = "0.15.8"
log = "0.4.25"
#rbatis = "4.5.50"
rbatis = { version = "4.5.50", features = ["debug_mode"] }
rbdc-mysql = "4.5.17"
fast_log = "1.6"
rbs = { version = "4.5" }
# 整数与枚举或其他类型的序列化与反序列化
bcrypt = "0.17.0"
dashmap = "7.0.0-rc1"
tower = "0.5.1"
hyper = "1.6.0"
http-body-util = "0.1.2"
bytes = "1.10.0"
rand = "0.8.5"
tower-http = { version = "0.5.0", features = ["cors"] }
oss-rust-sdk = "0.1.5"